# zero2prod

./: Cargo.toml  Dockerfile
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: get.rs
tests/: helth_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
