[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
config = "0.13"
actix-web = "4.2.1"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1", features = ["v4"]}
chrono = { version = "0.4.22", default-features = false, fetures = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


# Dev Dependencies are used exclusively when running tests or examples
# They do not get incuded in the final application binary!
[dev-dependencies]
reqwest = "0.11.13"

