[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
validator = "0.16"
serde-aux = "4"
unicode-segmentation = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.7"
log = "0.4"
config = "0.13"
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, fetures = ["clock"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
base64 = "0.21.4"
sha3 = "0.9.1"
argon2 = {version = "0.4.1", features = ["std"]}
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"



[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]


# Dev Dependencies are used exclusively when running tests or examples
# They do not get incuded in the final application binary!
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
wiremock = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
once_cell = "1"
# test 에서 에러시 더 많은 정보
claim = "0.5.0"
linkify = "0.8"
